fix: overflow

--- a/app/[lang]/manage-profile/component/index.module.scss
+++ b/app/[lang]/manage-profile/component/index.module.scss
@@ -411,6 +411,7 @@
     margin-right: 16px;
     margin-bottom: 16px;
     background-color: #1976d2 !important;
+    word-break: break-all!important;
   }
 }
 
